--- a/src/main.scss
+++ b/src/main.scss
@@ -1,74 +1,77 @@
+@import 'reset-css';
+@import url('https://fonts.cdnfonts.com/css/roboto');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --bg: #F5F5F5;
+  --app-width: 1280px;
+  --dark-gray: #7F8C9B;
+  --light-piggy: #FADFDC;
+  --piggy: #F5B09B;
+  --blue: #1D9BF0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
+html,
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  font-family: 'Roboto';
+
+  ::selection {
+    background-color: var(--piggy);
+    color: white;
+  }
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.highlight {
+  background: linear-gradient(180deg, rgba(255,255,255,0) 75%, var(--light-piggy) 75%, var(--light-piggy) 85%, rgba(255,255,255,0) 85%);
+}
+
+.shadow {
+  box-shadow: 0px 25px 50px -12px #0000001A;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  all: unset;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 125ms ease-in-out;
+
+  &:hover {
+    scale: 1.1;
+    filter: contrast(120%);
+  }
 }
 
-button:hover {
-  border-color: #646cff;
+.btn {
+  border-radius: 30px;
+  padding: 0 50px;
+  border: 1px solid hsl(0, 0%, 80%);
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.btn-search {
+  border: none;
+  background-color: var(--blue);
+  color: #fff;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+.App {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  height: 100%;
+  max-width: var(--app-width);
+}
 
-  a:hover {
-    color: #747bff;
-  }
+.sidenav {
+  width: 112px;
+  margin: 35px 0;
+}
 
-  button {
-    background-color: #f9f9f9;
-  }
+.body {
+  flex-grow: 1;
+  margin: 35px 0;
 }
