--- a/src/assets/scss/_sidenav.scss
+++ b/src/assets/scss/_sidenav.scss
@@ -1,10 +1,18 @@
 .sidenav {
+    @media screen and (max-width: 992px) {
+        width: 100%;
+    }
 
     &__list {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 30px;
+
+        @media screen and (max-width: 992px) {
+            flex-direction: row;
+            margin: 0 20px;
+        }
     }
 
 }
