--- a/src/assets/scss/_sidenav.scss
+++ b/src/assets/scss/_sidenav.scss
@@ -1,4 +1,7 @@
 .sidenav {
+    max-width: 74px;
+    margin: 35px 12px;
+
     @media screen and (max-width: 992px) {
         width: 100%;
     }
@@ -8,6 +11,7 @@
         flex-direction: column;
         align-items: center;
         gap: 30px;
+        max-width: 74px;
 
         @media screen and (max-width: 992px) {
             flex-direction: row;
