--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -79,6 +79,7 @@
             border-radius: 15px;
             border: 1px solid var(--light-gray);
             cursor: pointer;
+            max-height: 115px;
         }
 
         svg {
