--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -13,7 +13,7 @@
     cursor: pointer;
 
     @media screen and (max-width: 674px) {
-        width: auto;
+        width: 100%;
     }
 
     header {
@@ -71,6 +71,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            min-height: 115px;
         }
 
         .preview {
