--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -1,7 +1,7 @@
 .card {
     background-color: #fff;
     // height: 415px;
-    min-height: 392px;
+    min-height: 433px;
     width: 265px;
     border-radius: 15px;
     border: 1px solid var(--light-gray);
@@ -18,6 +18,7 @@
 
     @media screen and (max-width: 674px) {
         width: 100%;
+        min-height: auto;
     }
 
     header {
