--- a/src/assets/scss/_body.scss
+++ b/src/assets/scss/_body.scss
@@ -343,6 +343,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    margin-bottom: 60px;
 }
 .reset {
     background-color: var(--blue);
