--- a/src/assets/scss/_body.scss
+++ b/src/assets/scss/_body.scss
@@ -343,7 +343,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    margin-bottom: 60px;
+    padding-bottom: 80px;
 }
 .reset {
     background-color: var(--blue);
