--- a/src/assets/scss/_body.scss
+++ b/src/assets/scss/_body.scss
@@ -36,7 +36,7 @@
         margin-top: 40px;
         flex-wrap: wrap;
 
-        @media screen and (max-width: 727px) {
+        @media screen and (max-width: 1224px) {
             gap: 20px;
         }
 
@@ -159,9 +159,9 @@
             flex-direction: row;
             flex-wrap: wrap;
             gap: 15px;
-            @media screen and (max-width: 727px) {
-                flex-direction: column;
-            }
+            // @media screen and (max-width: 727px) {
+            //     flex-direction: column;
+            // }
 
             li>button {
                 background-color: var(--light-gray);
@@ -200,6 +200,10 @@
 
         @media screen and (max-width: 662px) {
             justify-content: center;
+        }
+
+        @media screen and (max-width: 727px) {
+            padding-bottom: 40px;
         }
 
         ul {
@@ -261,8 +265,20 @@
     width: 20%;
     margin-left: 80%;
     @media screen and (max-width: 727px) {
-        width: 40%;
-        margin-left: 60%;
+        display: flex;
+        justify-content: center;
+        gap: 16px;
+        width: 100%;
+        margin: 15px 0;
+        transform: translateY(0);
+
+        position: sticky;
+        top: 0;
+        background-color: #fff;
+        padding: 15px;
+        z-index: 1;
+        border-radius: 15px;
+        border: 1px solid var(--light-gray);
     }
 
     .page-item.disabled {
@@ -282,6 +298,9 @@
 
         a {
             padding: 5px;
+            width: 24px;
+            display: flex;
+            justify-content: center;
         }
     }
 
@@ -303,13 +322,26 @@
         align-items: center;
         font-size: 0.9rem;
         font-weight: bold;
+        transform: scale(1.3);
         cursor: default;
+    }
+}
+
+footer {
+    justify-content: flex-end;
+    display: none;
+    @media screen and (max-width: 727px) {
+        display: flex;
+    }
+    .btn-up {
+        margin-bottom: 40px;
+        padding: 16px;
     }
 }
 
 .DatePicker {
     display: flex;
-    @media screen and (max-width: 727px) {
+    @media screen and (max-width: 1224px) {
         width: 100%;
     }
 }
@@ -324,7 +356,7 @@
     width: 235px;
     color: #808080;
     box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.1019607843);
-    @media screen and (max-width: 727px) {
+    @media screen and (max-width: 1224px) {
         height: 55px;
         width: 100%;
         text-align: start;
